[gd_scene load_steps=21 format=3 uid="uid://duromskhojgnm"]

[ext_resource type="Script" path="res://Components/amount_changer.gd" id="1_3u4qs"]
[ext_resource type="StyleBox" uid="uid://c1usrfhyl4dr3" path="res://Styles/Buttons/AddSubtractButtonNormal.tres" id="1_docqu"]
[ext_resource type="StyleBox" uid="uid://dhv3bcj37uv05" path="res://Styles/Buttons/AddSubtractButtonHover.tres" id="3_ds030"]
[ext_resource type="StyleBox" uid="uid://jjwg1q3nnjoc" path="res://Styles/Buttons/AddSubtractButtonPressed.tres" id="3_gw3d1"]
[ext_resource type="StyleBox" uid="uid://6ju4sqoqpuhs" path="res://Styles/Buttons/ResetButtonNormal.tres" id="5_rguq1"]
[ext_resource type="StyleBox" uid="uid://nib70xf81kd8" path="res://Styles/Buttons/ResetButtonHover.tres" id="6_rukwf"]
[ext_resource type="StyleBox" uid="uid://cqwqbdkthv6al" path="res://Styles/Buttons/ResetButtonPressed.tres" id="7_rfq30"]

[sub_resource type="SystemFont" id="SystemFont_tlnkm"]
subpixel_positioning = 0

[sub_resource type="FontVariation" id="FontVariation_uk0gl"]
base_font = SubResource("SystemFont_tlnkm")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6gvd7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eqk23"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j5o8b"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 3.0
expand_margin_right = 3.0
shadow_color = Color(0.494118, 0.211765, 0.0627451, 0.588235)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yaq5p"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.992157, 0.882353, 0.835294, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 3.0
expand_margin_right = 3.0
shadow_color = Color(0.494118, 0.211765, 0.0627451, 0.588235)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2bakm"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.207843, 0.0705882, 0.0117647, 0.0980392)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 3.0
expand_margin_right = 3.0
shadow_color = Color(0.494118, 0.211765, 0.0627451, 0.588235)
shadow_size = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5mvof"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pudkj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fyxa2"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 2.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 3.0
expand_margin_right = 3.0
shadow_color = Color(0.494118, 0.211765, 0.0627451, 0.588235)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ccqhk"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 2.0
bg_color = Color(0.929412, 0.929412, 0.792157, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 1.0
expand_margin_right = 1.0
shadow_color = Color(0.785156, 0.667969, 0.484375, 1)
shadow_size = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n1nny"]

[sub_resource type="LabelSettings" id="LabelSettings_ics4c"]
font_color = Color(0.494118, 0.211765, 0.0627451, 1)

[node name="AmountChanger" type="Node2D"]
position = Vector2(0, -32)
script = ExtResource("1_3u4qs")

[node name="ButtonAdd" type="Button" parent="."]
offset_left = 20.0
offset_top = 64.0
offset_right = 44.0
offset_bottom = 92.0
scale = Vector2(1.00318, 1)
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_pressed_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_hover_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_focus_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_hover_pressed_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_fonts/font = SubResource("FontVariation_uk0gl")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("1_docqu")
theme_override_styles/hover = ExtResource("3_ds030")
theme_override_styles/pressed = ExtResource("3_gw3d1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_6gvd7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_eqk23")
text = "+"

[node name="ButtonAdd5" type="Button" parent="."]
offset_left = 36.0
offset_top = 36.0
offset_right = 56.0
offset_bottom = 60.0
scale = Vector2(1.00318, 1)
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_pressed_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_hover_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_focus_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_hover_pressed_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_j5o8b")
theme_override_styles/hover = SubResource("StyleBoxFlat_yaq5p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2bakm")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_5mvof")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pudkj")
text = "+5"

[node name="ButtonSubtract" type="Button" parent="."]
offset_left = -44.0
offset_top = 64.0
offset_right = -20.0
offset_bottom = 92.0
scale = Vector2(1.00318, 1)
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_pressed_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_hover_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_focus_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_hover_pressed_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_fyxa2")
theme_override_styles/hover = SubResource("StyleBoxFlat_yaq5p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2bakm")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_5mvof")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pudkj")
text = "-"

[node name="ButtonSubtract5" type="Button" parent="."]
offset_left = -56.0
offset_top = 36.0
offset_right = -36.0
offset_bottom = 60.0
scale = Vector2(1.00318, 1)
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_pressed_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_hover_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_focus_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_hover_pressed_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_j5o8b")
theme_override_styles/hover = SubResource("StyleBoxFlat_yaq5p")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2bakm")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_5mvof")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pudkj")
text = "-5"

[node name="ButtonReset" type="Button" parent="."]
offset_left = -44.0
offset_top = -16.0
offset_right = -28.0
offset_bottom = 3.0
scale = Vector2(1.00318, 1)
theme_override_colors/font_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_pressed_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_hover_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_focus_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_hover_pressed_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_disabled_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("5_rguq1")
theme_override_styles/hover = ExtResource("6_rukwf")
theme_override_styles/pressed = ExtResource("7_rfq30")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ccqhk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_n1nny")
disabled = true
text = "â†»"

[node name="Label" type="Label" parent="."]
offset_left = -16.0
offset_top = 64.0
offset_right = 16.0
offset_bottom = 92.0
text = "0"
label_settings = SubResource("LabelSettings_ics4c")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="ButtonAdd" to="." method="_on_button_add_pressed"]
[connection signal="pressed" from="ButtonAdd5" to="." method="_on_button_add_5_pressed"]
[connection signal="pressed" from="ButtonSubtract" to="." method="_on_button_subtract_pressed"]
[connection signal="pressed" from="ButtonSubtract5" to="." method="_on_button_subtract_5_pressed"]
[connection signal="pressed" from="ButtonReset" to="." method="_on_button_reset_pressed"]
